--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class="container">
 
       <div class="videoWrapper">
-        <video >
+        <video controls> 
           <source src="video/video.mp4" type="video/mp4">
           <source src="video/video.ogg" type="video/ogg">
           <track label="English" kind="subtitles" srclang="en" src="video/captions.vtt" default>
