Add Desctription meta tag

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <meta charset="utf-8">
   <title>Interactive Video Player</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="Description" content="2019 rebuild of Front End Web Developer Portfolio">
 
   <script src="js/jquery.min.js"></script>
   <script src="js/mediaelement-and-player.min.js"></script>
-  
+
   <link rel="stylesheet" href="css/mediaelementplayer.css" />
   <link rel="stylesheet" href="css/styles.css"/>
 
@@ -17,12 +18,12 @@
 <body class="container">
 
       <div class="videoWrapper">
-        <video controls> 
+        <video controls>
           <source src="video/video.mp4" type="video/mp4">
           <source src="video/video.ogg" type="video/ogg">
           <!--<track label="English" kind="subtitles" srclang="en" src="video/captions.vtt" default>-->
         </video>
-      </div> 
+      </div>
       <div class="transcript">
         <p>
           <span data-start="0.000" data-end="4.130">
